@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7406 2004/10/11 20:55:04 tv Exp $
+$NetBSD: CHANGES,v 1.7407 2004/10/11 21:17:07 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4618,3 +4618,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Added dbus-glib-0.22 [jmmv 2004-10-11]
 	Added cygwin_lib-1.5.11.1 [tv 2004-10-11]
 	Added cygwin_esound-0.2.35.1 [tv 2004-10-11]
+	Updated jakarta-tomcat to 5.0.28 [abs 2004-10-11]
+
